# sibuserv-webui

./: CMakeLists.txt  HOWTO  INSTALL  LICENSE  README  README.md  TODO  Version.h.in  changelog
config/: CMakeLists.txt  access-settings.json  common-settings.json  page-settings.json  profile-settings.json  project-settings.json  user-settings.json  webui-launcher.conf  webui-settings.json
css/: default.css
css/auth/: default.css
css/build-history/: default.css
css/build-results/: default.css
css/help/: default.css
css/password-update/: default.css
css/projects/: default.css
html/: 403-template.html  404-template.html  auth-template.html  body-template.html  build-history-template.html  build-results-template.html  head-template.html  help-template.html  no-build-history-template.html  no-projects-template.html  page-template.html  password-update-template.html  projects-template.html
html/css/: default.css
js/: build-history.js  build-results.js  main.js  password-update.js  projects-table.js
l10n/: en_US.json  ru_RU.json
src/: CMakeLists.txt  abstractsettings.cpp  abstractsettings.h  applicationsettings.cpp  applicationsettings.h  buildhistoryitem.cpp  buildhistoryitem.h  buildresultsitem.cpp  buildresultsitem.h  cache.cpp  cache.h  commandlinedialogs.cpp  commandlinedialogs.h  commonsettings.cpp  commonsettings.h  controller.cpp  controller.h  datafile.cpp  datafile.h  help.cpp  help.h  htmlpage.cpp  htmlpage.h  javascriptredirect.h  localization.cpp  localization.h  logmanager.cpp  logmanager.h  main.cpp  options.cpp  options.h  projectstableitem.cpp  projectstableitem.h  request.cpp  request.h  resourcemanager.cpp  resourcemanager.h  resources.qrc  response.cpp  response.h  (+9 more)
src/basic/: avatarfile.cpp  avatarfile.h  datafile.cpp  datafile.h  datafilewithlimitedaccess.cpp  datafilewithlimitedaccess.h  htmlpage.cpp  htmlpage.h  javascriptredirect.cpp  javascriptredirect.h  request.cpp  request.h  response.cpp  response.h
src/items/: abstracttableitem.cpp  abstracttableitem.h  buildhistoryitem.cpp  buildhistoryitem.h  buildresultsitem.cpp  buildresultsitem.h  projectstableitem.cpp  projectstableitem.h
src/pages/: buildhistorypage.cpp  buildhistorypage.h  buildresultspage.cpp  buildresultspage.h  counterpage.cpp  counterpage.h  debugpage.cpp  debugpage.h  helppage.cpp  helppage.h  profilesettingspage.cpp  profilesettingspage.h  profilesettingssecuritypage.cpp  profilesettingssecuritypage.h  projectspage.cpp  projectspage.h  settingspage.cpp  settingspage.h
src/settings/: abstractsettings.cpp  abstractsettings.h  applicationsettings.cpp  applicationsettings.h  commonsettings.cpp  commonsettings.h  usersettings.cpp  usersettings.h
src/tools/: commandlinedialogs.cpp  commandlinedialogs.h  help.cpp  help.h  localization.cpp  localization.h  logmanager.cpp  logmanager.h  options.cpp  options.h  resourcemanager.cpp  resourcemanager.h  sessionsmanager.cpp  sessionsmanager.h  unpacker.cpp  unpacker.h
